--- a/app/Resources/TwigBundle/views/Exception/error400.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error400.html.twig
@@ -1,6 +1,5 @@
 {% extends "OTSCoreBundle::errors_layout.html.twig" %}
 
 {% block content %}
-    Either your browser couldn't properly access the server, or your request was corrupted before reaching it.<br />
-    Please try again later.
+    {{ 'ots_core.errors.error400'|trans|nl2br }}
 {% endblock %}
