--- a/app/Resources/TwigBundle/views/Exception/error401.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error401.html.twig
@@ -1,5 +1,5 @@
 {% extends "OTSCoreBundle::errors_layout.html.twig" %}
 
 {% block content %}
-    You have to be logged-in to see this page.
+    {{ 'ots_core.errors.error401'|trans|nl2br }}
 {% endblock %}
