--- a/app/Resources/TwigBundle/views/Exception/error403.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error403.html.twig
@@ -1,5 +1,5 @@
 {% extends "OTSCoreBundle::errors_layout.html.twig" %}
 
 {% block content %}
-    Access to this page is restricted.
+    {{ 'ots_core.errors.error403'|trans|nl2br }}
 {% endblock %}
