--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,6 +1,5 @@
 {% extends "OTSCoreBundle::errors_layout.html.twig" %}
 
 {% block content %}
-    We couldn't find the page you're looking for.<br />
-    Check that the URL you asked for is correct.
+    {{ 'ots_core.errors.error404'|trans|nl2br }}
 {% endblock %}
