--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -1,6 +1,5 @@
 {% extends "OTSCoreBundle::errors_layout.html.twig" %}
 
 {% block content %}
-    The web server encountered an internal error.<br />
-    Please try again later.
+    {{ 'ots_core.errors.error500'|trans|nl2br }}
 {% endblock %}
