--- a/app/Resources/views/emails/confirmation.html.twig
+++ b/app/Resources/views/emails/confirmation.html.twig
@@ -1,39 +1,39 @@
 <div style="width:100%;height:60px;background-color:#222;display:flex;justify-content:space-around;">
 	<div style="margin-top:5px;width:25%;padding-left:10px;">
-		<a href="{{ path('ots_core_home') }}" title="Musée du Louvre">
-            <img src="{{ imgUrl }}" alt="Logo - Musée du Louvre" />
+		<a href="{{ path('ots_core_home') }}" title="{{ 'ots_core.site.title'|trans }}">
+            <img src="{{ imgUrl }}" alt="{{ 'ots_core.header.title.img_alt'|trans }}" />
 		</a>
 	</div>
 	<div style="width:75%;text-align:right;">
-		<h2 style="color:#eee;padding-right:10px;padding-top:5px;">Musée du Louvre</h2>
+		<h2 style="color:#eee;padding-right:10px;padding-top:5px;">{{ 'ots_core.site.title'|trans }}</h2>
 	</div>
 </div>
 
-<h3>Thank you for booking online!</h3>
+<h3>{{ 'ots_billing.mail.body.title'|trans }}</h3>
 
 <p>
-	Please print this mail and show it at the entrance of the museum, along with all necessary ID cards.
+	{{ 'ots_billing.mail.body.info'|trans }}
 </p>
 
 <p>
-	<b>Reference Code: {{ order.reference }}</b>
+	<b>{{ 'ots_billing.mail.body.reference'|trans }} {{ order.reference }}</b>
 </p>
 
 <div style="background-color:#f5f5f5;border:1px solid #e3e3e3;border-radius:4px;width:95%;margin:auto;display:flex;justify-content:space-around;padding:0 10px;text-align:center;">
 	<div style="width:50%;">
 		<p>
-			Date: {{ order.date|date("d/m/Y") }}
+			{{ 'ots_core.site.date'|trans }} {{ order.date|date("d/m/Y") }}
 		</p>
 		<p>
-			Ticket type: {% if order.type %}Full-day{% else %}Half-day{% endif %}
+			{{ 'ots_core.site.type'|trans }} {% if order.type %}{{ 'ots_core.site.full_day'|trans }}{% else %}{{ 'ots_core.site.half_day'|trans }}{% endif %}
 		</p>
 	</div>
 	<div style="width:50%;">
 		<p>
-			Tickets count: {{ order.nbTickets }}
+			{{ 'ots_core.site.count'|trans }} {{ order.nbTickets }}
 		</p>
 		<p>
-			Total price: {{ order.price }}€
+			{{ 'ots_core.site.total_price'|trans }} {{ order.price }}€
 		</p>
 	</div>
 </div>
@@ -42,43 +42,43 @@
 	<div style="width:95%;margin:auto;display:flex;justify-content:space-around;">
 		<div style="width:50%;padding-left:10px;">
 			<p>
-				<b>First name:</b> {{ ticket.firstName }}
+				<b>{{ 'ots_core.site.first_name'|trans }}</b> {{ ticket.firstName }}
 			</p>
 			<p>
-				<b>Country:</b> {{ ticket.country }}
+				<b>{{ 'ots_core.site.country'|trans }}</b> {{ ticket.country }}
 			</p>
 			<p>
-				<b>Price:</b> {{ ticket.price }}€
+				<b>{{ 'ots_core.site.price'|trans }}</b> {{ ticket.price }}€
 			</p>
 		</div>
 		<div style="width:50%;padding-left:10px;">
 			<p>
-				<b>Name:</b> {{ ticket.name }}
+				<b>{{ 'ots_core.site.name'|trans }}</b> {{ ticket.name }}
 			</p>
 			<p>
-				<b>Birthdate:</b> {{ ticket.birthDate|date("d/m/Y") }}
+				<b>{{ 'ots_core.site.birthdate'|trans }}</b> {{ ticket.birthDate|date("d/m/Y") }}
 			</p>
 			<p>
 				<b>
 					{% if ticket.discounted %}
-						Reduced rate
+						{{ 'ots_core.site.reduced_rate'|trans }}
 					{% elseif ticket.price == 0 %}
-						Toddler rate
+						{{ 'ots_core.site.toddler_rate'|trans }}
 					{% elseif order.type %}
 						{% if ticket.price == 12 %}
-							Senior rate
+							{{ 'ots_core.site.senior_rate'|trans }}
 						{% elseif ticket.price == 16 %}
-							Normal rate
+							{{ 'ots_core.site.normal_rate'|trans }}
 						{% elseif ticket.price == 8 %}
-							Child rate
+							{{ 'ots_core.site.child_rate'|trans }}
 						{% endif %}
 					{% else %}
 						{% if ticket.price == 6 %}
-							Senior rate
+							{{ 'ots_core.site.senior_rate'|trans }}
 						{% elseif ticket.price == 8 %}
-							Normal rate
+							{{ 'ots_core.site.normal_rate'|trans }}
 						{% elseif ticket.price == 4 %}
-							Child rate
+							{{ 'ots_core.site.child_rate'|trans }}
 						{% endif %}
 					{% endif %}
 				</b>
