--- a/web/bundles/otscore/css/billing.css
+++ b/web/bundles/otscore/css/billing.css
@@ -52,6 +52,9 @@ form {
 #ots_billingbundle_ticketorder_date, .hidden-label {
 	display: none;
 }
+#order_datepicker {
+	padding: 0;
+}
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover {
 	border: 1px solid #222;
 	background-color: unset;
