Translated Stripe Checkout js file

--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -223,7 +223,8 @@
     {% if flow.currentStepNumber == 3 %}
         {% javascripts
             'bundles/otscore/js/billing.js'
-            'bundles/otscore/js/stripe-checkout.js' %}
+            'bundles/otscore/js/stripe-checkout.js'
+            'bundles/bazingajstranslation/js/translator.min.js' %}
             <script type="text/javascript" src="{{ asset_url }}"></script>
         {% endjavascripts %}
     {% else %}
