--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -203,10 +203,10 @@
                 </div>
             {% endif %}
 
-            {% set next = ('ots_billing.flow.next'|trans) %}
-            {% set reset = ('ots_billing.flow.reset'|trans) %}
-            {% set back = ('ots_billing.flow.back'|trans) %}
-            {% set finish = ('ots_billing.flow.finish'|trans) %}
+            {% set next = ('ots_billing.flow.next')|trans %}
+            {% set reset = ('ots_billing.flow.reset')|trans %}
+            {% set back = ('ots_billing.flow.back')|trans %}
+            {% set finish = ('ots_billing.flow.finish')|trans %}
 
             {% include '@CraueFormFlow/FormFlow/buttons.html.twig' with {
                 craue_formflow_button_class_finish: 'hidden',
@@ -220,6 +220,12 @@
             } %}
         {{ form_end(orderForm) }}
     </div>
+
+    <script>
+        global = {
+            locale: '{{ app.request.locale }}'
+        }
+    </script>
 {% endblock %}
 
 {% block javascripts %}
