--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -18,27 +18,7 @@
 	<h1 id="title">{{ 'ots_billing.billing.body.title'|trans }}</h1>
     <hr />
 
-    {% for message in app.session.flashbag.get('info') %}
-        <div class="alert alert-info">{{ message }}</div>
-    {% endfor %}
-
-    {% for flashMessage in app.session.flashbag.get('success') %}
-        <div class="alert alert-success">
-            {{ flashMessage }}
-        </div>
-    {% endfor %}
-
-    {% for flashMessage in app.session.flashbag.get('warning') %}
-        <div class="alert alert-warning">
-            {{ flashMessage }}
-        </div>
-    {% endfor %}
-
-    {% for flashMessage in app.session.flashbag.get('error') %}
-        <div class="alert alert-danger">
-            {{ flashMessage }}
-        </div>
-    {% endfor %}
+    {% include 'templates/flash.html.twig' %}
 
     <div class="row">
         <div>
@@ -102,27 +82,7 @@
                             'attr': {'class': 'form-control'}
                         }) }}
 
-                        <table id="calculator">
-                            <tr>
-                                <td><span class="btn btn-default calc_number">1</span></td>
-                                <td><span class="btn btn-default calc_number">2</span></td>
-                                <td><span class="btn btn-default calc_number">3</span></td>
-                            </tr>
-                            <tr>
-                                <td><span class="btn btn-default calc_number">4</span></td>
-                                <td><span class="btn btn-default calc_number">5</span></td>
-                                <td><span class="btn btn-default calc_number">6</span></td>
-                            </tr>
-                            <tr>
-                                <td><span class="btn btn-default calc_number">7</span></td>
-                                <td><span class="btn btn-default calc_number">8</span></td>
-                                <td><span class="btn btn-default calc_number">9</span></td>
-                            </tr>
-                            <tr>
-                                <td><span class="btn btn-default calc_number">0</span></td>
-                                <td colspan="2"><span class="btn btn-default calc_del"><span class="glyphicon glyphicon-arrow-left"></span></span></td>
-                            </tr>
-                        </table>
+                        {% include 'templates/calculator.html.twig' %}
                     </div>
                 {% endif %}
             {% endif %}
@@ -180,7 +140,7 @@
                     <ul>
                         {% for i in 0..3 %}
                             <li>
-                                {{ ('ots_billing.billing.step3.help_list.'~i)|trans|raw }}
+                                {{ ('ots_billing.billing.step3.help_list.'~i)|trans|striptags('<span>')|raw }}
                             </li>
                         {% endfor %}
                     </ul>
