Added a medal to the footer

--- a/src/OTS/CoreBundle/Resources/views/layout.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/layout.html.twig
@@ -104,6 +104,11 @@
 		      			{{ 'ots_core.footer.terms.content'|trans|raw }}
 		      		</a>
 		      	</div>
+		      	<div class="col-xs-12">
+		      		{% image 'https://insight.sensiolabs.com/projects/ff5af6f7-ea9a-499f-be19-c689bb8b7bd9/small.png' %}
+    					<img src="{{ asset_url }}" alt="SensioLabsInsight - Platinum medal" />
+					{% endimage %}
+		      	</div>
 		    </footer>
 	  	</div>
 
