--- a/src/OTS/CoreBundle/Resources/views/layout.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/layout.html.twig
@@ -14,7 +14,7 @@
 		  	{% stylesheets filter='cssrewrite'
 		  		'//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'
 		  		'//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css'
-		  		'../vendor/components/font-awesome/css/font-awesome.min.css'
+		  		'//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'
 		  		'bundles/otscore/css/main.css'
 		  		'bundles/otscore/css/header.css'
 		  		'bundles/otscore/css/footer.css' %}
