Changed domain for a few assets served via CloudFront

--- a/src/OTS/CoreBundle/Resources/views/layout.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/layout.html.twig
@@ -29,7 +29,7 @@
 		      	<div class="container">
 		      		<div class="navbar-header">
                     	<a href="{{ path('ots_core_home') }}" title="{{ 'ots_core.header.title.link_title'|trans }}" class="navbar-brand">
-                        	{% image 'http://assets.fhuszti.com/louvre/logo.png' %}
+                        	{% image 'http://assets.fhuszti.tech/louvre/logo.png' %}
     							<img src="{{ asset_url }}" alt="{{ 'ots_core.header.title.img_alt'|trans }}" />
 							{% endimage %}
 						</a>
