Added scssphp and jsqueez filters to assetic

--- a/src/OTS/BillingBundle/Resources/views/Billing/confirmation.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/confirmation.html.twig
@@ -6,7 +6,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    {% stylesheets filter='cssrewrite'
+    {% stylesheets filter='cssrewrite, ?scssphp'
         'bundles/otscore/css/default-page.css' %}
         <link rel="stylesheet" href="{{ asset_url }}" type="text/css">
     {% endstylesheets %}
