--- a/src/OTS/CoreBundle/Resources/views/Core/index.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/Core/index.html.twig
@@ -7,7 +7,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    {% stylesheets filter='cssrewrite'
+    {% stylesheets filter='cssrewrite, ?scssphp'
         'bundles/otscore/css/home.css' %}
         <link rel="stylesheet" href="{{ asset_url }}" type="text/css">
     {% endstylesheets %}
@@ -151,7 +151,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {% javascripts
+    {% javascripts filter='?jsqueeze'
         'bundles/otscore/js/home.js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
